# tina4delphi

./: .gitignore  DelphiHtmlComponentUtility.pas  Doxyfile  LICENSE  SUPPORTED.md  Thumbs.db  Tina4AndroidIME.pas  Tina4Core.pas  Tina4Delphi.bpi  Tina4Delphi.deployproj  Tina4Delphi.dpk  Tina4Delphi.dproj  Tina4Delphi.dres  Tina4Delphi.getit.json  Tina4Delphi.res  Tina4DelphiDesign.dpk  Tina4DelphiDesign.dproj  Tina4DelphiDesign.res  Tina4DelphiProject.groupproj  Tina4DelphiResource.rc  Tina4Frond.pas  Tina4HTMLPages.pas  Tina4HTMLRender.pas  Tina4HttpServer.pas  Tina4InterposerClasses.pas  Tina4JSONAdapter.pas  Tina4OpenSSL.dcu  Tina4OpenSSL.pas  Tina4REST.pas  Tina4RESTEditor.pas  Tina4RESTRequest.pas  Tina4RESTRequestEditor.pas  Tina4Route.pas  Tina4SocketServer.pas  Tina4Twig.pas  Tina4URLHeaderEditor.dfm  Tina4URLHeaderEditor.pas  Tina4WebServer.pas  Tina4WebSocketBroker.pas  Tina4WebSocketClient.dcu  (+12 more)
.claude/: launch.json
Example/: AndroidManifest.template.xml  CrashSimTest.deployproj  CrashSimTest.dpr  CrashSimTest.dproj  CrashSimTest.res  DataModule.dfm  (+29 more)
claude-pascal-mcp/: .gitignore  LICENSE  README.md  pyproject.toml
claude-pascal-mcp/.claude-plugin/: marketplace.json
claude-pascal-mcp/examples/HelloConsole/: HelloConsole.dpr
claude-pascal-mcp/examples/HelloFMX/: HelloFMX.dpr  uMain.fmx  uMain.pas
claude-pascal-mcp/examples/HelloWorld/: HelloWorld.dpr  uMain.dfm  uMain.pas
claude-pascal-mcp/src/pascal_mcp/: __init__.py  __main__.py  compiler.py  form_parser.py  ide_watcher.py  installer.py  preview_bridge.py  screenshot.py  server.py  templates.py
(+46 files in other folders)
