[project]
name = "claude-pascal-mcp"
version = "0.1.0"
description = "MCP server for Pascal/Delphi/Lazarus compilation and execution with Claude"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tina4 Community" },
]
keywords = ["mcp", "pascal", "delphi", "lazarus", "freepascal", "claude"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[project.scripts]
pascal-mcp = "pascal_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pascal_mcp"]
